sjengida/c2/suicide_mid_eval
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:906:11: error: use of undeclared identifier 'xmmword_41B640'
v149[0] = xmmword_41B640; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:907:11: error: use of undeclared identifier 'xmmword_41B650'
v146[0] = xmmword_41B650; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:908:11: error: use of undeclared identifier 'xmmword_41B640'
v149[1] = xmmword_41B640; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:909:11: error: use of undeclared identifier 'xmmword_41B650'
v146[1] = xmmword_41B650; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:1212:5: error: use of undeclared identifier 'dword_66759C'
+ ( dword_66759C[v21] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:1227:5: error: use of undeclared identifier 'dword_66759C'
+ ( dword_66759C[v21] == 13) 
    ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:1253:8: error: use of undeclared identifier 'dword_66759C'
v87 = &dword_66759C[v21]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:1297:8: error: use of undeclared identifier 'dword_66759C'
v77 = &dword_66759C[v21]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:1342:8: error: use of undeclared identifier 'dword_66759C'
v98 = &dword_66759C[v21]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/seval.c:1432:8: error: use of undeclared identifier 'dword_66759C'
v34 = &dword_66759C[v21]; 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/suicide_mid_eval/src/obj/seval.o] Error 1
